<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    android:id="@+id/ratingLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="@dimen/layout_margin_16dp"
    app:layout_constraintTop_toBottomOf="@id/rvReview">


    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leave_your_review_here"/>

    <androidx.appcompat.widget.AppCompatRatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:isIndicator="false"
        android:numStars="10"
        android:rating="5.0"
        android:layout_marginTop="@dimen/layout_margin_8dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin_8dp"
        android:hint="@string/content_hint_text"
        android:inputType="textLongMessage|textCapSentences"
        android:autofillHints="name"
        android:imeOptions="actionDone"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:layout_marginTop="@dimen/layout_margin_16dp"/>

</androidx.appcompat.widget.LinearLayoutCompat>