<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvGenre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/layout_margin_16dp"
        android:paddingHorizontal="@dimen/layout_padding_16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toTopOf="parent"
        tools:itemCount="8"
        tools:listitem="@layout/genre_item_layout" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtTagLine"
        style="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin_16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvGenre"
        tools:text="You can't outrun your destiny."/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupOverview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="llOverview,txtOverview"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/llOverview"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin_16dp"
        android:layout_marginTop="@dimen/layout_margin_8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTagLine"
        android:text="@string/overview"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtOverview"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin_8dp"
        android:layout_marginHorizontal="@dimen/layout_margin_16dp"
        app:layout_constraintTop_toBottomOf="@id/llOverview"
        tools:text="@tools:sample/lorem/random"
        tools:maxLines="6"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupTrailer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="llTrailer,rvTrailer"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/llTrailer"
        android:text="@string/trailer"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin_16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtOverview"
        tools:text="Trailer: "/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTrailer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/layout_margin_8dp"
        android:paddingHorizontal="@dimen/layout_padding_16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/llTrailer"
        tools:itemCount="8"
        tools:listitem="@layout/youtube_item_layout"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupBackdrop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="llBackdrop,rvBackdrop"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/llBackdrop"
        android:text="@string/more_photos"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin_16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvTrailer" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBackdrop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/layout_margin_8dp"
        android:paddingHorizontal="@dimen/layout_padding_16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/llBackdrop"
        tools:itemCount="8"
        tools:listitem="@layout/backdrop_item_layout"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupPoster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="llPoster,rvPoster"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/llPoster"
        android:text="@string/more_poster"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin_16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvBackdrop" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPoster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/layout_margin_8dp"
        android:paddingHorizontal="@dimen/layout_padding_16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/llPoster"
        tools:itemCount="8"
        tools:listitem="@layout/backdrop_item_layout"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupCast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="llCast,rvCast"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/llCast"
        android:text="@string/cast"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin_16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvPoster"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/layout_margin_8dp"
        android:paddingHorizontal="@dimen/layout_padding_16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/llCast"
        tools:itemCount="8"
        tools:listitem="@layout/cast_item_layout"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupCrew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="llCrew,rvCrew"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/llCrew"
        android:text="@string/crew"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin_16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvCast"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCrew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:layout_marginTop="@dimen/layout_margin_8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/llCrew"
        tools:itemCount="8"
        tools:listitem="@layout/crew_item_layout"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupRelateMovies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="llRelativeMovies,rvRelativeMovie"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/llRelativeMovies"
        android:text="@string/relative_movies"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin_16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvCrew"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRelativeMovie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/layout_margin_8dp"
        android:paddingHorizontal="@dimen/layout_padding_16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/llRelativeMovies"
        tools:itemCount="8"
        tools:listitem="@layout/movie_item_layout"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="llReview,rvReview"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/llReview"
        android:text="@string/reviews"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin_16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvRelativeMovie"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvReview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/layout_margin_8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/llReview"
        tools:itemCount="3"
        tools:listitem="@layout/review_item_layout"/>

    <include layout="@layout/post_review_layout"
        app:layout_constraintTop_toBottomOf="@id/rvReview"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ratingLayout"
        android:layout_marginTop="@dimen/layout_margin_16dp"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>